# agents

./: .dockerignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
apps/agentcore-bridge/: Cargo.toml  Dockerfile
apps/agentcore-bridge/src/: lib.rs  main.rs
apps/mock-agent-http/: Cargo.toml  Dockerfile
apps/mock-agent-http/src/: lib.rs  main.rs
crates/agent-contract/: Cargo.toml
crates/agent-contract/src/: lib.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs
infra/agentcore-cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/agentcore-cdk/lib/: agentcore-stack.ts  bootstrap-stack.ts
