[workspace]
members = [
    "apps/agentcore-bridge",
    "apps/mock-agent-http",
    "crates/agent-contract",
    "crates/agent-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/nigel/agents"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
bytes = "1.11.0"
http = "1.4.0"
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-bedrockagentcore = "1"
aws-sdk-dynamodb = "1"
