[package]
name = "agentcore-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-contract = { path = "../../crates/agent-contract" }
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-bedrockagentcore.workspace = true
aws-sdk-dynamodb.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["limit", "timeout"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
